CHANGES
*******

0.2 (unreleased)
================

- Nothing changed yet.


0.1 (2014-11-25)
================

- Initial public release.