@@ -16,7 +16,6 @@ reg = git git@github.com:morepath/reg.git
 recipe = zc.recipe.egg
 interpreter = devpython
 eggs = more.forwarded [test]
-       pyflakes
        flake8
        radon
 
